--- a/index_sp.html
+++ b/index_sp.html
@@ -9,9 +9,9 @@
 <!--[if lt IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-<link href="css/pc/index.css" rel="stylesheet">
-<script src="js/pc/jquery-1.11.1.min.js"></script>
-<script src="js/pc/index.js"></script>
+<link href="css/sp/index_sp.css" rel="stylesheet">
+<script src="js/sp/jquery-1.11.1.min.js"></script>
+<script src="js/sp/index_sp.js"></script>
 </head>
 
 <body>
