--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-<div id="modal-main">モーダルウィンドウ</div>
+<div id="modal-content">モーダルウィンドウ</div>
 
 <!-- #contents START -->
 <div id="contents">
